# micrograd

./: README.md  demo.ipynb  pyproject.toml  scratchpad.ipynb  test_engine.py
micrograd/: engine.py  nn.py
test/: test_engine.py
