[project]
name = "micrograd"
version = "0.1.0"
description = "a reimplementation of Karpathy's micrograd in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "ty>=0.0.1a15",
]